--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,31 +1,31 @@
-<!--<!DOCTYPE html>-->
-<!--<html xmlns:th="http://www.thymeleaf.org">-->
-<!--<head>-->
-<!--    <meta charset="UTF-8">-->
-<!--    <title>Register</title>-->
-<!--</head>-->
-<!--<body>-->
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="UTF-8">
+    <title>Register</title>
+</head>
+<body>
 
-<!--<h2>Create an Account</h2>-->
+<h2>Create an Account</h2>
 
-<!--<form th:action="@{/home}" th:object="${user}" method="post">-->
+<form th:action="@{/home}" th:object="${user}" method="post">
 
-<!--    <label>First Name:</label>-->
-<!--    <input type="text" th:field="*{fName}" />-->
+    <label>First Name:</label>
+    <input type="text" th:field="*{fname}" />
 
-<!--    <label>Last Name:</label>-->
-<!--    <input type="text" th:field="*{lName}" />-->
+    <label>Last Name:</label>
+    <input type="text" th:field="*{lname}" />
 
-<!--    <label>Email:</label>-->
-<!--    <input type="email" th:field="*{email}" />-->
+    <label>Email:</label>
+    <input type="email" th:field="*{email}" />
 
-<!--    <label>Password:</label>-->
-<!--    <input type="password" th:field="*{password}" />-->
+    <label>Password:</label>
+    <input type="password" th:field="*{hashedPassword}" />
 
-<!--    <button type="submit">Register</button>-->
-<!--</form>-->
+    <button type="submit">Register</button>
+</form>
 
-<!--<a th:href="@{/login}">Already have an account?</a>-->
+<a th:href="@{/login}">Already have an account?</a>
 
-<!--</body>-->
-<!--</html>-->
+</body>
+</html>
