controllers and html no errors but postMapping is not working

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,7 +15,7 @@
     <input type="email" th:field="*{email}" />
 
     <label>Password:</label>
-    <input type="password" th:field="*{hashedPassword}" />
+    <input type="password" th:field="*{plainPassword}" />
 
     <button type="submit">login</button>
 </form>
