--- a/src/main/resources/templates/register_form.html
+++ b/src/main/resources/templates/register_form.html
@@ -7,6 +7,9 @@
 <body>
 
 <h2>Create an Account</h2>
+<div th:if="${errorMessage}"
+     style="color:red;border:1px solid red;padding:10px;margin-bottom:15px;">
+    <p th:text="${errorMessage}"></p></div>
 
 <form action="#" th:action="@{/users/register}" th:object="${user}" method="post">
 
