--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,8 +7,8 @@
 <body>
 <nav>
     <ul>
-        <li><a th:href="@{/login}">Log In</a></li>
-        <li><a th:href="@{/users/register}">Register</a></li>
+        <a th:href="@{/login}">Log In</a>
+        <a th:href="@{/register}">Register</a>
     </ul>
 </nav>
 </body>
