after login back to home

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -21,8 +21,7 @@
 
     <button type="submit">login</button>
 </form>
-
-<a th:href="@{/home}"></a>
+<a th:href="@{/index}"></a>
 
 </body>
 </html>
