More controller stuff

--- a/src/main/resources/templates/StudentRegister.html
+++ b/src/main/resources/templates/StudentRegister.html
@@ -10,7 +10,7 @@
 <div th:if="${errorMessage}"
      style="color:red;border:1px solid red;padding:10px;margin-bottom:15px;">
     <p th:text="${errorMessage}"></p></div>
-<form action="#" th:action="@{/users/register}" th:object="${user}" method="post">
+<form action="#" th:action="@{/student/register}" th:object="${user}" method="post">
 
     <label>First Name:</label>
     <input type="text" th:field="*{fname}" />
@@ -23,6 +23,14 @@
 
     <label>Password:</label>
     <input type="password" th:field="*{plainPassword}" />
+    <label>Graduating Year:</label>
+    <input type="text" th:field="*{graduatingYear}" />
+    <label>University:</label>
+    <input type="text" th:field="*{uniName}" />
+    <label>Your Major:</label>
+    <input type="text" th:field="*{studentMajor}" />
+    <label>Your Faculty:</label>
+    <input type="text" th:field="*{faculty}" />
 
     <button type="submit">Register</button>
 </form>
