--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,9 @@
 <nav>
     <ul>
         <a th:href="@{/login}">Log In</a>
-        <a th:href="@{/register}">Register</a>
+        <a th:href="@{/admin/register}">Admin Register</a>
+        <a th:href="@{/student/register}">Student Register</a>
+        <a th:href="@{/recruiter/register}">Recruiter Register</a>
     </ul>
 </nav>
 </body>
