--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>"Not Found :("</title>
+    <title>Webpage Not Found :( </title>
 </head>
 <body>
-    <text>"The page you're looking for could not be found"</text>
+    <text>The page you're looking for could not be found</text>
 </body>
 </html>
