add RepositoryAccessors to prevent constant reading & writing.

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
 <div th:if="${errorMessage}"
      style="color:red;border:1px solid red;padding:10px;margin-bottom:15px;">
     <p th:text="${errorMessage}"></p></div>
-<!--/*@thymesVar id="user" type="com.group.educate.Model.User.User"*/-->
+<!--/*@thymesVar id="user" type="com.group.InternMap.Model.User.User"*/-->
 <form th:action="@{/login}" th:object="${user}" method="post">
 
     <label>Email:</label>
