--- a/src/main/resources/templates/RecruiterRegister.html
+++ b/src/main/resources/templates/RecruiterRegister.html
@@ -41,7 +41,7 @@
     <button type="submit">Register</button>
 </form>
 
-<p>If your company doesn't exist, you can <a th:href="@{/Company/Register}">create a company</a> first.</p>
+<p>If your company doesn't exist, you can <a th:href="@{/company/Register}">create a company</a> first.</p>
 
 <a th:href="@{/login}">Already have an account?</a>
 
