fixed the dropdown to match the enums names

--- a/src/main/resources/templates/JobPosting.html
+++ b/src/main/resources/templates/JobPosting.html
@@ -29,10 +29,9 @@
     <label>Job Posting Type:</label>
     <select th:field="*{jobPostingType}">
         <option value="" disabled selected>Select job type</option>
-        <option value="FULL_TIME">Full Time</option>
-        <option value="PART_TIME">Part Time</option>
-        <option value="INTERNSHIP">Internship</option>
-        <option value="CONTRACT">Contract</option>
+        <option value="FullTime">Full Time</option>
+        <option value="Internship">Part Time</option>
+        <option value="FreeLanceProject">Internship</option>
     </select>
 <!--    <input type="text" th:field="*{studentMajor}" />-->
 <!--    <label>Your Faculty:</label>-->
