--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,8 +11,11 @@
         <li> <a th:href="@{/admin/register}">Admin Register</a></li>
         <li><a th:href="@{/student/register}">Student Register</a></li>
         <li><a th:href="@{/recruiter/register}">Recruiter Register</a></li>
+       <li> <a th:href="@{/JobPostings}">
+            <button>View All Job Postings</button>
+        </a></li>
+
     </ul>
 </nav>
-
 </body>
 </html>
