--- a/src/main/resources/templates/JobPosting.html
+++ b/src/main/resources/templates/JobPosting.html
@@ -48,7 +48,7 @@
     <tr th:each="job : ${jobPostings}">
         <td th:text="${job.jobName}">Job Title</td>
         <td th:text="${job.companyName}">Company</td>
-<!--        <td th:text="${job.recruiterEmail}">Recruiter Email</td>-->
+        <td th:text="${job.recruiterEmail}">Recruiter Email</td>
         <td th:text="${job.datePosted}">Date</td>
         <td th:text="${job.jobDescription}">Description</td>
         <td th:text="${job.jobRequirements}">Job Requirements</td>
