Job Posting page is mostly operational now

--- a/src/main/resources/templates/JobPosting.html
+++ b/src/main/resources/templates/JobPosting.html
@@ -57,7 +57,7 @@
     </tbody>
 </table>
 
-<a th:href="@{/index}"><button>Back to Home</button></a>
+<a th:href="@{/}"><button>Back to Home</button></a>
 
 </body>
 </html>
