--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,6 +14,7 @@
        <li> <a th:href="@{/JobPostings}">
             <button>View All Job Postings</button>
         </a></li>
+        <li><a th:href="@{/profile}">Profile</a></li>
 
     </ul>
 </nav>
