--- a/src/main/resources/templates/Application.html
+++ b/src/main/resources/templates/Application.html
@@ -6,10 +6,11 @@
 </head>
 <body>
 
-<h2>Create an Account</h2>
+<h2>Create Application</h2>
 <div th:if="${errorMessage}"
      style="color:red;border:1px solid red;padding:10px;margin-bottom:15px;">
-    <p th:text="${errorMessage}"></p></div>
+    <p th:text="${errorMessage}"></p>
+</div>
 
 <form action="#" th:action="@{/application/save}" th:object="${application}" method="post">
 
@@ -21,22 +22,11 @@
 
     <label>Email:</label>
     <input type="email" th:field="*{email}" />
+
     <label>CV:</label>
     <input type="text" th:field="*{cv}" />
 
-<!--    <label>Graduating Year:</label>-->
-<!--    <input type="text" th:field="*{application.graduatingYear}" />-->
-<!--    <label>University:</label>-->
-<!--    <input type="text" th:field="*{uniName}" />-->
-<!--    <label>Your Major:</label>-->
-<!--    <input type="text" th:field="*{studentMajor}" />-->
-<!--    <label>Your Faculty:</label>-->
-<!--    <input type="text" th:field="*{faculty}" />-->
-
     <button type="submit">Apply</button>
 </form>
-
-<a th:href="@{/login}">Already have an account?</a>
-
 </body>
 </html>
