--- a/src/main/resources/templates/Application.html
+++ b/src/main/resources/templates/Application.html
@@ -12,7 +12,7 @@
     <p th:text="${errorMessage}"></p>
 </div>
 
-<form action="#" th:action="@{/application/save}" th:object="${applicationandCVDTO}" method="post">
+<form action="#" th:action="@{/application/save(jobId=${job.postingUUID})}" th:object="${applicationandCVDTO}" method="post">
 
     <label>First Name:</label>
     <input type="text" th:field="*{application.fname}" />
@@ -22,8 +22,9 @@
 
     <label>Email:</label>
     <input type="email" th:field="*{application.email}" />
-
-<!--    <label>CV:</label>-->
+    <label>phone no:</label>
+    <input type="text" th:field="*{application.phoneNumber}" />
+    <!--    <label>CV:</label>-->
 <!--    <input type="text" th:field="*{cv}" />-->
 <
     <button type="submit">Apply</button>
