--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,26 +1,39 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Log in</title>
+    <title> log in </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/InternMapSignIn.css}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel ="stylesheet" href ="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+    <meta name="viewport" content="width=device-width,intitial-scale=1.0">
 </head>
-<body>
+<header>
+<!--    <button id = "b1"> Sign up </button>-->
+    <img id="logo" th:src="@{/images/Logo%20Glass.png}" alt="Logo">
 
-<h2>find your account</h2>
+</header>
+<body>
+<div id = "p1">
+find your account
+</div>
+
 <div th:if="${errorMessage}"
      style="color:red;border:1px solid red;padding:10px;margin-bottom:15px;">
     <p th:text="${errorMessage}"></p></div>
 <!--/*@thymesVar id="user" type="com.group.InternMap.Model.User.User"*/-->
+<div id = "p2" class ="box">
 <form th:action="@{/login}" th:object="${user}" method="post">
 
-    <label>Email:</label>
-    <input type="email" th:field="*{email}" />
+    <input id = "f1" type="email" th:field="*{email}"  placeholder="Email" />
+    <br>
+    <input id = "f2"  type="password" th:field="*{plainPassword}" placeholder="Password"/>
 
-    <label>Password:</label>
-    <input type="password" th:field="*{plainPassword}" />
-
-    <button type="submit">login</button>
+    <input id = "f3" type="submit">
 </form>
+</div>
 <a th:href="@{/index}"></a>
 
 </body>
