working on html and css

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -33,6 +33,7 @@ find your account
 
     <input id = "f3" type="submit">
 </form>
+    <div id = "p4">Looking for the sign up page? <a href = "InternMapSignUp.html"> Sign up</a>  </div>
 </div>
 <a th:href="@{/index}"></a>
 
