Fixed assigning a company to the designated recruiter FOR THE 100TH TIME.

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
 </head>
 <header>
 <!--    <button id = "b1"> Sign up </button>-->
-    <img id="logo" th:src="@{/images/Logo%20Glass.png}" alt="Logo">
+    <img id="logo" th:src="@{/images/Logo Glass.png}" alt="Logo">
 
 </header>
 <body>
