--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,21 +2,70 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Welcome to InternMap</title>
+    <title> InternMap </title>
+    <link rel="icon" type="image/png" href="/images/Logo Glass.png">
+    <link rel="icon" type="image/png" href="/images/Logo Glass.png">
+    <link rel="stylesheet" href="/static/InternMapHomepage.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+          rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/InternMapHomepage.css}">
 </head>
-<body>
-<nav>
-    <ul>
-       <li> <a th:href="@{/login}">Log In</a></li>
-        <li> <a th:href="@{/admin/register}">Admin Register</a></li>
-        <li><a th:href="@{/student/register}">Student Register</a></li>
-        <li><a th:href="@{/recruiter/register}">Recruiter Register</a></li>
-       <li> <a th:href="@{/JobPostings}">
-            <button>View All Job Postings</button>
-        </a></li>
-        <li><a th:href="@{/profile}">Profile</a></li>
 
-    </ul>
-</nav>
+<header>
+    <div id="h1">
+        <div id="T1" class="box">
+            InternMap
+        </div>
+        <nav>
+        <div id="s1" class="box">
+            <button id="hb1" onclick="location.href = '/login'">Sign in</button>
+            <button id="hb2" onclick="location.href = '/admin/register'">Admin sign up</button>
+            <button id="hb3" onclick="location.href = '/student/register'">Student sign up</button>
+            <button id="hb4" onclick="location.href = '/recruiter/register'">Recruiter sign up</button>
+            <button id="hb6" onclick="location.href = '/profile'"><img id="person-fill" src="/images/person_fill.png" alt="Profile" style="width: 25px; height: 26px;"></button>
+        </div>
+        </nav>
+    </div>
+    <div id="l1">
+        <img id="logo" src="/images/Logo Glass.png" alt="This didn't load successfuly >:(">
+        <span id="p1">InternMap</span>
+        <span id="p2">Welcome to the platform that sets your future for you</span>
+    </div>
+</header>
+
+<body>
+<div id="bb1" class="box">
+    <div id="bh">
+        Explore Roadmaps
+    </div>
+    <div id="bb2">
+        <button id="bu1"> Roadmaps</button>
+        <button id="bu2" onclick="location.href = '/JobPostings'"> Positions</button>
+    </div>
+</div>
+<br><br><br><br>
+<!--<nav>-->
+<!--    <ul>-->
+<!--        <li><a th:href="@{/login}">Log In</a></li>-->
+<!--        <li><a th:href="@{/admin/register}">Admin Register</a></li>-->
+<!--        <li><a th:href="@{/student/register}">Student Register</a></li>-->
+<!--        <li><a th:href="@{/recruiter/register}">Recruiter Register</a></li>-->
+<!--        <li><a th:href="@{/JobPostings}">-->
+<!--            <button id="hb5">View All Job Postings</button>-->
+<!--        </a></li>-->
+<!--        <li><a th:href="@{/profile}">Profile</a></li>-->
+
+<!--    </ul>-->
+<!--</nav>-->
+<div class="button-grid">
+    <div class="grid-button"
+         th:each="roadmap : ${roadmaps}"
+         th:text="${roadmap.name}">
+    </div>
+</div>
 </body>
 </html>
