--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -68,4 +68,19 @@
     </div>
 </div>
 </body>
+
+<br><br><br><br><br><br><br>
+<footer>
+    <div id="ft1" class="box">
+        InternMap
+    </div>
+    <div id="ft2">
+        <ul>
+            <li>Home</li>
+            <li>RoadMaps</li>
+            <li>JobPosting</li>
+            <li>About us</li>
+        </ul>
+    </div>
+</footer>
 </html>
