--- a/src/main/resources/templates/JobPosting.html
+++ b/src/main/resources/templates/JobPosting.html
@@ -32,6 +32,9 @@
  <a th:href="@{/JobPostingForm}">
     <button>Add a job Posting</button>
 </a>
+<a th:href="@{/recruiter/jobpostings}">
+<button>view your job Postings</button>
+</a>
 <table>
     <thead>
     <tr>
