now recruiter can keep track of their job posting and applicaton yet to view application html is not implemented

--- a/src/main/resources/templates/recruiter-jobpostings.html
+++ b/src/main/resources/templates/recruiter-jobpostings.html
@@ -14,7 +14,7 @@
         <td th:text="${job.jobName}"></td>
         <td th:text="${job.jobDescription}"></td>
         <td>
-            <a th:href="@{/recruiter/applications/{id}(id=${job.jobId})}"
+            <a th:href="@{/recruiter/applications/{id}(id=${job.jobPostingUUID})}"
                class="btn btn-primary btn-sm">
                 View Applications ( <span th:text="${job.application.size()}"></span> )
             </a>
