--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -146,7 +146,7 @@
 
             <a href="/" class="btn btn-secondary">Back to Dashboard</a>
 
-            <a th:href="@{'/profile/edit'}" class="btn btn-primary">Edit Profile</a>
+<!--            <a th:href="@{'/profile/edit'}" class="btn btn-primary">Edit Profile</a>-->
 
         </div>
 
