--- a/src/main/resources/templates/searchResult.html
+++ b/src/main/resources/templates/searchResult.html
@@ -32,7 +32,7 @@
     </thead>
     <tbody>
     <tr th:each="job : ${results}">
-        <td th:text="${job.jobTitle}"></td>
+        <td th:text="${job.jobName}"></td>
         <td th:text="${job.companyName}"></td>
         <td th:text="${job.recruiterEmail}"></td>
         <td th:text="${job.datePosted}"></td>
