Changes (I don't have the energy to write an actual descriptive message)

--- a/src/main/resources/static/InternMapHomepage.css
+++ b/src/main/resources/static/InternMapHomepage.css
@@ -184,35 +184,37 @@ body {
 
 footer {
     width: auto;
-    height: 300px;
-    background: linear-gradient(180deg, rgb(255, 255, 255) 15%, #3397FC 100%);
+    height: min-content;
+    background: linear-gradient(180deg, rgba(88, 171, 255, 0.60) 0%, #3397FC 100%);
+
+    .quick-links {
+        display: grid;
+        width: auto;
+        flex-direction: column;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        justify-items: center;
+        justify-content: space-around;
+    }
 
     #ft1 {
         text-align: start;
+        padding-top: 30px;
+        padding-left: clamp(2px, 10vw, 80px);
         text-shadow: 0 0 75px rgba(0, 0, 0, 0.25);
+        color: #FFFFFF;
         font-size: 64px;
-        font-style: normal;
         font-weight: 800;
-        line-height: normal;
-        background-clip: text;
         background: #FFFFFF;
         background-clip: text;
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        display: flex;
-        width: 502px;
-        flex-direction: column;
-        justify-content: center;
-        aspect-ratio: 502.00/118.79;
     }
 
     #ft2 {
         color: #FFF;
-        font-size: 32px;
         font-style: normal;
-        font-weight: 800;
-        line-height: normal;
-        padding-left: 70px;
-        margin: 10px;
+        font-size: 28px;
+        line-height: 60px;
+        font-weight: 700;
+        padding-top: 20px;
+        padding-bottom: 20px;
     }
 }
