--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -2,9 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Webpage Not Found :( </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="/static/InternMapHomepage.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+          rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+
+    <title>Webpage Not Found :(</title>
 </head>
 <body>
-    <text>The page you're looking for could not be found</text>
+    <div class="container text-center mt-5">
+    <img id="logo" src="/images/Logo Glass.png" alt="This didn't load successfuly >:(" style="width: 156px; height: 156px;">
+    <div><h1 style="margin-top: -15px;:">404</h1> </div>
+    </div>
+    <div class="container text-center mt-3">
+    <span>We couldn't find the page you're looking for ☹️</span>
+        <div>
+        <button id="hb3" onclick="location.href = '/'" style="
+                margin-top: 20px;
+                padding: 10px 20px;
+                border-radius: 34px;
+                border: none;
+                cursor: pointer;
+                text-align: center;
+                font-size: max(14px, 1vw);
+                font-style: normal;
+                font-weight: 700;
+                line-height: normal;
+                background: #1883fd;
+                color: #ffffff;
+
+            ">Home</button>
+        </div>
+    </div>
 </body>
 </html>
