--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,6 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/InternMapHomepage.css}">
+    <meta name="viewport" content="width=device-width">
 </head>
 
 <header>
@@ -71,16 +72,21 @@
 
 <br><br><br><br><br><br><br>
 <footer>
+<div>
+<!--    <img id="footer-image" src="/images/Footer image.png">-->
+    <div id="footer">
     <div id="ft1" class="box">
         InternMap
     </div>
     <div id="ft2">
-        <ul>
+        <ul class="quick-links">
             <li>Home</li>
             <li>RoadMaps</li>
             <li>JobPosting</li>
             <li>About us</li>
         </ul>
     </div>
+</div>
+</div>
 </footer>
 </html>
